Add Mac App Store sandbox support and recent repositories
- Add Entitlements.plist with App Sandbox and user-selected file access
- Add tauri-plugin-fs, persisted-scope, and store plugins
- Configure bundle category, entitlements path, and minimum macOS version
- Add recent repositories list (last 10) to welcome screen with persistence
- Use recursive: true in folder dialog for sandbox subdirectory access

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,6 +11,9 @@ serde_json = "1"
 git2 = { version = "0.20", features = ["vendored-libgit2"] }
 chrono = { version = "0.4", features = ["serde"] }
 tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-persisted-scope = "2"
+tauri-plugin-store = "2"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
