Fix Phase 1 bugs and add roadmap and distribution guide
- Set restrictive Content Security Policy (was disabled)
- Gate devtools behind Cargo feature flag (dev only, not in release builds)
- Handle empty repos gracefully instead of crashing
- Improve detached HEAD error message
- Add ROADMAP.md tracking path to v1.0
- Add docs/distribution-guide.md explaining signing and App Store vs direct distribution

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,8 +3,11 @@ name = "git-history-editor"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+devtools = ["tauri/devtools"]
+
 [dependencies]
-tauri = { version = "2", features = ["devtools"] }
+tauri = { version = "2", features = [] }
 tauri-build = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
