--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,5 +18,8 @@ tauri-plugin-fs = "2"
 tauri-plugin-persisted-scope = "2"
 tauri-plugin-store = "2"
 
+[dev-dependencies]
+tempfile = "3"
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
