--- a/src-tauri/Entitlements.plist
+++ b/src-tauri/Entitlements.plist
@@ -6,6 +6,8 @@
     <true/>
     <key>com.apple.security.files.user-selected.read-write</key>
     <true/>
+    <key>com.apple.security.network.client</key>
+    <true/>
     <key>com.apple.application-identifier</key>
     <string>$TEAM_ID.com.git-history-editor.app</string>
     <key>com.apple.developer.team-identifier</key>
